tests/negative/issue1344/U.juvix
module U;
  inductive Unit {
    t : Unit;
  };
  
end;